# burr-tools

./: .gitignore  AUTHORS  BUILD.md  COPYRIGHT  ChangeLog  Makefile.am  NEWS  README  README.md  bootstrap  burrtools.nsi.in  configure.ac  cross-mingw64.txt  doxygen.cfg  doxygen.cfg.in  meson.build  windows.txt
Docker/: Dockerfile.amazonlinux-2017.09  Dockerfile.ubuntu-18.04  README
README.build/: AmazonLinux.readme  MacOS-10.15.5.readme  Ubuntu-18.04.readme  Windows-10.readme
admin/: .hold
doc/: UserGuide.tm  convert.sh  doc.tm  node1.html  node10.html  node13.html  node14.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html
doc_src/: Representation0.xmpuzzle  Representation1.xmpuzzle  Representation2.xmpuzzle  Representation3.xmpuzzle  Representation4.xmpuzzle  setResolution  txt2tags.py  userGuide.t2t
examples/: 12PieceSeparation.xmpuzzle  AlPackino.xmpuzzle  AugmentedSecondStellation.xmpuzzle  BallRoom.xmpuzzle  Bermuda.xmpuzzle  BrokenSticks.xmpuzzle  CubeInCage.xmpuzzle  DemoMirrorParadox.xmpuzzle  DemoPieceGenerator.xmpuzzle  DiagonalCube.xmpuzzle  DraculasDentalDesaster.xmpuzzle  FourPieceTetrahedron.xmpuzzle  HexSticks.xmpuzzle  Makefile.am  PelikanBurr.xmpuzzle  PermutatedThirdStellation.xmpuzzle  PiecesOfEight.xmpuzzle  Prisgon.xmpuzzle  README  README.TXT  SolidSixPieceBurrs.xmpuzzle
experimental/: buildBurrExamples  buildLibBurr  buildWebAssembly
m4/: README
scripts/: create-macos-bundle.sh
src/: Makefile.am  burrTxt.cpp  burrTxt2.cpp  config.h.in  converter.cpp  lib_example_c.c  lib_example_swift.swift  lib_interface.cpp  lib_interface.h  meson.build  pack.cpp  pack2.cpp  tester.cpp
src/flu/: Flu_Button.cpp  Flu_Button.h  Flu_Combo_Box.cpp  Flu_Combo_Box.h  Flu_Combo_List.cpp  Flu_Combo_List.h  Flu_Combo_Tree.cpp  Flu_Combo_Tree.h  Flu_File_Chooser.cpp  Flu_File_Chooser.h  Flu_Label.cpp  Flu_Label.h  Flu_Return_Button.cpp  Flu_Return_Button.h  Flu_Separator.cpp  Flu_Separator.h  Flu_Tree_Browser.cpp  Flu_Tree_Browser.h  Flu_Wrap_Group.cpp  Flu_Wrap_Group.h  README  flu_file_chooser_pixmaps.h  flu_pixmaps.cpp  flu_pixmaps.h
src/gui/: ArcBall.cpp  ArcBall.h  AssemblyCallbacks.cpp  AssemblyCallbacks.h  BlockList.cpp  BlockList.h  DisasmToMoves.cpp  DisasmToMoves.h  Fl_Table.cpp  Fl_Table.h  GroupsEditor.cpp  GroupsEditor.h  Image.cpp  Image.h  ImageExport.cpp  ImageExport.h  Images.cpp  Images.h  LFl_Tile.cpp  LFl_Tile.h  Layouter.cpp  Layouter.h  MainWindow.cpp  MainWindow.h  Makefile.am  PieceSelector.cpp  PieceSelector.h  PieceVisibility.cpp  PieceVisibility.h  PlacementBrowser.cpp  PlacementBrowser.h  SquareEditor.cpp  SquareEditor.h  VoxelDrawer.cpp  VoxelDrawer.h  VoxelView.cpp  VoxelView.h  WindowWidgets.cpp  WindowWidgets.h  arcball.cpp  (+93 more)
src/gui/images/: Grid_Color_Center.xpm  Grid_Color_Minimize.xpm  Grid_Color_Origin.xpm  Grid_Disabled_Center.xpm  Grid_Disabled_Minimize.xpm  Grid_Disabled_Origin.xpm  Grid_Monochrome_Center.xpm  Grid_Monochrome_Minimize.xpm  Grid_Monochrome_Origin.xpm  InOut_Color_Fixed_In.xpm  InOut_Color_Fixed_Out.xpm  InOut_Color_RemoveColor_In.xpm  InOut_Color_RemoveColor_Out.xpm  InOut_Color_Variable_In.xpm  InOut_Color_Variable_Out.xpm  InOut_Disabled_Fixed_In.xpm  InOut_Disabled_Fixed_Out.xpm  InOut_Disabled_RemoveColor_In.xpm  InOut_Disabled_RemoveColor_Out.xpm  InOut_Disabled_Variable_In.xpm  InOut_Disabled_Variable_Out.xpm  InOut_Monochrome_Fixed_In.xpm  InOut_Monochrome_Fixed_Out.xpm  InOut_Monochrome_RemoveColor_In.xpm  InOut_Monochrome_RemoveColor_Out.xpm  InOut_Monochrome_Variable_In.xpm  InOut_Monochrome_Variable_Out.xpm  Rescale_Color_X1.xpm  Rescale_Color_X2.xpm  Rescale_Color_X3.xpm  Rescale_Disabled_X1.xpm  Rescale_Disabled_X2.xpm  Rescale_Disabled_X3.xpm  Rescale_Monochrome_X1.xpm  Rescale_Monochrome_X2.xpm  Rescale_Monochrome_X3.xpm  TB_Color_Brush.xpm  TB_Color_Columns_X.xpm  TB_Color_Columns_Y.xpm  TB_Color_Columns_Z.xpm  (+82 more)
src/halfedge/: README  face.cpp  face.h  halfedge.cpp  halfedge.h  modifiers.cpp  modifiers.h  polyhedron.cpp  polyhedron.h  polyhedron_iterators.h  vector3.cpp  vector3.h  vertex.cpp  vertex.h  volume.cpp  volume.h
src/help/: Fl_Help_Dialog.cpp  Fl_Help_Dialog.h  Fl_Help_View.cpp  Fl_Help_View.h  data2c.cpp  flstring.cpp  flstring.h  helpdata.cpp  helpdata.h  helpviewer.cpp
src/lib/: AssemblyCallbacks.cpp  AssemblyCallbacks.h  Makefile.am  assembler.cpp  assembler.h  assembler_0.cpp  assembler_0.h  assembler_1.cpp  assembler_1.h  assemblerfrontend_0.cpp  assemblerfrontend_0.h  assemblerfrontend_1.cpp  assemblerfrontend_1.h  assemblerfrontend_2.cpp  assemblerfrontend_2.h  assemblerfrontend_3.cpp  assemblerfrontend_3.h  assemblerthread.cpp  assemblerthread.h  assembly.cpp  assembly.h  assm_0_frontend_0.cpp  assm_0_frontend_0.h  assm_0_frontend_1.cpp  assm_0_frontend_1.h  assm_0_frontend_2.cpp  assm_0_frontend_2.h  bitfield.h  bitfield_test.cpp  bt_assert.cpp  bt_assert.h  burrgrower.cpp  burrgrower.h  converter.cpp  converter.h  disasmtomoves.cpp  disasmtomoves.h  disassembler.h  disassembler_0.cpp  disassembler_0.h  (+83 more)
src/lib/tabs_0/: generator.cpp  generator_0.cpp  generator_mesh_0.cpp  meshverts.inc  rotmatrix.inc  rotx.inc  roty.inc  rotz.inc  symcalc.inc  symmetries.inc  tablesizes.inc  transformmini.inc  transmult.inc  unifiedsym.inc  uniquesym.inc
src/lib/tabs_1/: generator.cpp  generator_1.cpp  generator_mesh_1.cpp  meshverts.inc  rotmatrix.inc  rotx.inc  roty.inc  rotz.inc  symcalc.inc  symmetries.inc  tablesizes.inc  transformmini.inc  transmult.inc  unifiedsym.inc  uniquesym.inc
src/lib/tabs_2/: generator.cpp  generator_2.cpp  rotmatrix.inc  symcalc.inc  symmetries.inc  tablesizes.inc  transformmini.inc  transmult.inc  unifiedsym.inc  uniquesym.inc
src/lib/tabs_3/: generator_mesh_3.cpp  meshverts.inc
src/lib/tabs_4/: generator_mesh_4.cpp  meshverts.inc
src/lua/: lauxlib.c  ldebug.c  llex.c  ltable.c  luaclass.cpp  luaclass.h
src/tools/: fileexists.cpp  fileexists.h  gzstream.h  homedir.cpp  homedir.h  intdiv.h  xml.cpp  xml.h
subprojects/: fltk.wrap  zlib.wrap
visualc/: burrLib.dsp  burrTools.dsp  (+1 more)
(+4 files in other folders)
