pkgdatadir = $(docdir)/examples

pkgdata_DATA = README \
	12PieceSeparation.xmpuzzle \
	AlPackino.xmpuzzle \
	AugmentedSecondStellation.xmpuzzle \
	BallRoom.xmpuzzle \
	Bermuda.xmpuzzle \
	BrokenSticks.xmpuzzle \
	CubeInCage.xmpuzzle \
	DemoMirrorParadox.xmpuzzle \
	DemoPieceGenerator.xmpuzzle \
	DiagonalCube.xmpuzzle \
	DraculasDentalDesaster.xmpuzzle \
	FourPieceTetrahedron.xmpuzzle \
	HexSticks.xmpuzzle \
	PelikanBurr.xmpuzzle \
	PermutatedThirdStellation.xmpuzzle \
	PiecesOfEight.xmpuzzle \
	Prisgon.xmpuzzle \
	SolidSixPieceBurrs.xmpuzzle

EXTRA_DIST = $(pkgdata_DATA)
